--- a/src/components/CardTitle.astro
+++ b/src/components/CardTitle.astro
@@ -9,7 +9,7 @@ const url = project.data ? project.data.url : project.url;
 ---
 
 <a
-  class="flex items-center pt-20 pb-4 gap-3 max-md:pt-10"
+  class="flex items-center mb-4 gap-3"
   href={url}
   target="_blank"
 >
