--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -7,13 +7,18 @@ const icons = false;
 const { projects } = Astro.props;
 ---
 
-<Layout title="Hirashiki Rafael's Portfolio Project" description={}>
+<Layout title="Rafael Hirashiki's Portfolio Project" description={}>
   <ProjectLayoutLinks project={icons} />
-  {
-    projects.map((project: any, i:any) => (
-      <>
-        <Card project={project} i={i}/>
-      </>
-    ))
-  }
+  <div
+    class="relative z-50 col-start-2 col-span-10 max-sm:col-start-3 max-sm:col-span-9"
+  >
+    <p class="italic text-2xl clr-brand-orange">Works at Agendae+</p>
+    {
+      projects.map((project: any, i: any) => (
+        <>
+          <Card project={project} i={i} />
+        </>
+      ))
+    }
+  </div>
 </Layout>
