--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const projects = await getCollection("projects");
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Hirashiki Rafael, Frontend Engineer's Nifty Journey</title>
+    <title>Rafael Hirashiki, Frontend Engineer's Nifty Journey</title>
     <meta name="description" content=" 
     Working to be a FullStack Engineer, specialized as a Frontend for now.
     Shooting for the stars. 
@@ -37,7 +37,7 @@ const projects = await getCollection("projects");
     <meta name="generator" content={Astro.generator} />
 
     <!-- OGP -->
-    <meta property="og:title" content="Hirashiki Rafael, a Frontend Engineer's Nifty Journey" />
+    <meta property="og:title" content="Rafael Hirashiki, a Frontend Engineer's Nifty Journey" />
     <meta property="og:type" content="website portfolio" />
     <meta
       property="og:url"
