--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -82,9 +82,9 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
   }
 </style>
 
-<Layout title="Hirashiki Rafael's 1st Project">
+<Layout title="Rafael Hirashiki's Career RoadMap">
   <ProjectLayoutLinks road={true} />
-  <ProjectLayouHead projectTitle="RoadMap" />
+  <ProjectLayouHead projectTitle="Rafael's Career RoadMap" />
   <div
     class="col-start-2 col-span-5 text-right relative -right-4 max-md:col-span-10"
   >
@@ -95,7 +95,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
           class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
-        Frontend Web<br />Development studies<i class="fa-solid fa-circle"></i>
+        Frontend Web<br />Development<i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball">
         HTML5/CSS3<i class="fa-solid fa-circle"></i>
@@ -140,7 +140,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         AB Test with VWO<i class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
-        Level up Frontend •<br />Basics of Backend •<br />Start System Dev •
+        Level up Frontend <br />Basics of Backend <br />Basic of Systems 
         <i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball">
@@ -150,16 +150,21 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Cypress End-to-End Testing<i class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball">
-        Javascript Unit Testing<i class="fa-solid fa-circle"></i>
+        Jest Unit Testing<i class="fa-solid fa-circle"></i>
       </p>
-      <h3 class="grid-item-ball">
-        Go<i class="fa-solid fa-circle"></i>
+      <p class="grid-item-ball">
+        Laravel<i class="fa-solid fa-circle"></i>
+      </p>
+
+      <br><br>
+      <p class="grid-item-ball clr-brand-blue">
+        API: Backend with Nest.js + Typescript<br>Redis, Jest, JWT, Insomnia, MongoDB<i class="fa-solid fa-circle"></i>
+      </p>
+      <h3 class="grid-item-ball clr-brand-blue">
+        Go • HTMX<i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball clr-brand-blue">
-        API: Backend (Nest.js + Typescript)<i class="fa-solid fa-circle"></i>
-      </p>
-      <p class="grid-item-ball clr-brand-blue">
-        Full Stack Project: Frontend (Astro.js: Frontend • Go:Backend)<i class="fa-solid fa-circle"></i>
+        Full Stack Web Project: Astro.js, HTMX • Go<i class="fa-solid fa-circle"></i>
       </p>
     </div>
 
@@ -168,10 +173,10 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <br>
       <br>
       <h3 class="grid-item-ball ball-black">
-        Data: Python or Mobile: Dart • Flutter<i class="fa-solid fa-circle"></i>
+        Data: Python<br>Mobile: Dart • Flutter<i class="fa-solid fa-circle"></i>
       </h3>
       <h3 class="grid-item-ball ball-black">
-        Explore Data Science<br />Mid Engineer (System, Front or Full Stack)
+        Mid Full Stack & Systems Engineer
         <i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball ball-black">
@@ -272,6 +277,15 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         <i class="fa-solid fa-circle"> </i>
          + 2 years specialization / MBA
       </h3>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>???
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>???
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>???
+      </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
         <i class="fa-solid fa-circle"></i>???
       </p>
