--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const navObj = [
   },
   {
     path: "/roadmap",
-    navTitle: "Roadmap & Projects",
+    navTitle: "Career & Roadmap",
     navSubtitle: "to INFINITY and Beyond!",
   },
   {
@@ -128,12 +128,12 @@ const navObj = [
       headerIndex ? (
         <>
           <section class="self-start">
-            <H1 text="HIRASHIKI RAFAEL" index={true} class="text-5xl max-xl:text-4xl max-md:text-3xl max-sm:text-2xl font-bold" />
+            <H1 text="Rafael Hirashiki" index={true} class="text-5xl max-xl:text-4xl max-md:text-3xl max-sm:text-2xl font-bold" />
             <p class="max-lg: text-sm">Casual Dancer</p>
           </section>
 
           <section class="text-2xl max-lg:text-lg max-md:text-lg max-sm:text-base font-bold">
-            <h2 class="pt-4 pb-4"><i class="fa-regular fa-circle"></i> Web Frontend Engineer (Junior)</h2>
+            <h2 class="pt-4 pb-4"><i class="fa-regular fa-circle"></i> Web Frontend Engineer</h2>
             <h3 class="pb-4"><i class="fa-solid fa-moon"></i> System Engineer (graduating)</h3>
           </section>
 
@@ -153,7 +153,7 @@ const navObj = [
                   href="/roadmap"
                   class="text-4xl max-xl:text-3xl max-lg:text-2xl max-md:text-xl font-bold flex flex-nowrap justify-center items-center gap-4 text-right"
                 >
-                  <p class="underline">RoadMap & Projects</p>
+                  <p class="underline">Career & Roadmap</p>
                   <div class="star-container">
                     <div class="star-bar" />
                     <i class="fa-solid fa-diamond" />
@@ -178,7 +178,7 @@ const navObj = [
         <>
           <ButtonToggleHeader client:only/>
           <RafaPic class=" w-4/6 m-auto h-fit max-lg:w-6/6" />
-          <H1 text="HIRASHIKI RAFAEL" index={false}  class="absolute bottom-1/4 -left-10 -rotate-90 w-0 whitespace-nowrap text-3xl  max-xl:text-2xl max-lg:text-3xl max-md:text-2xl font-bold  m-auto"/>
+          <H1 text="Rafael Hirashiki" index={false}  class="absolute bottom-1/4 -left-10 -rotate-90 w-0 whitespace-nowrap text-3xl  max-xl:text-2xl max-lg:text-3xl max-md:text-2xl font-bold  m-auto"/>
           <nav class="pb-16 relative z-50  max-xl:pb-20 self-end">
             <ul class="pr-4">
               {navObj.map((ele) => (
