--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -36,7 +36,7 @@ const { project, road, icons } = Astro.props;
   .v-bar,
   .h-bar {
     position: absolute;
-    background-color: var(--clr-bg);
+    background-color: var(--clr-brand-orange);
   }
   .v-bar {
     height: 100%;
@@ -55,6 +55,7 @@ const { project, road, icons } = Astro.props;
     width: 3px;
     background-color: var(--clr-bg);
     animation: animateVertical 0.8s 1 ease-in-out;
+    background-color: var(--clr-brand-orange);
   }
   .d-bar-container {
     rotate: 45deg;
@@ -70,13 +71,14 @@ const { project, road, icons } = Astro.props;
     position: absolute;
     top: -65px;
     left: 20px;
-    background-color: var(--clr-bg);
+    background-color: var(--clr-brand-orange);
   }
 
   .star {
     position: absolute;
     width: 20px;
     z-index: 50;
+    color: var(--clr-bg)
   }
   .star-btm {
     bottom: -8px;
@@ -92,7 +94,7 @@ const { project, road, icons } = Astro.props;
   }
 </style>
 
-<div class=" absolute top-8 pl-4 gap-y-4 w-6/6">
+<div class=" absolute top-8 pl-4 gap-y-4 w-6/6 z-0">
   <div class="bars-container col-start-1 col-span-full">
     <div class="relative h-bar-container">
       <i class="fa-solid fa-circle star -top-3 -left-1 text-xl opacity-100"></i>
