contact and improve menu button

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -2,6 +2,6 @@
 const { class: className, ...rest } = Astro.props;
 ---
 
-<main class={className} {...rest} >
+<main class={className} {...rest} id="main" >
     <slot/>
 </main>
