--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,9 @@ import { Image } from "astro:assets";
 import H1 from "./H1.astro";
 import RafaPic from "./Rafa-pic.astro";
 import ButtonToggleHeader from "./ButtonToggleHeader.tsx";
+import ProjectGithubIcon from "./ProjectGithubIcon.astro";
+import ProjectLinkedin from "./ProjectLinkedin.astro";
+import ContactIcons from "./ContactIcons.astro";
 const { headerIndex, class: className, ...rest } = Astro.props;
 const { pathname } = Astro.url;
 
@@ -96,7 +99,6 @@ const navObj = [
     text-decoration: underline;
     padding-top: 1.5rem;
   }
-
 </style>
 
 <header class={className} {...rest} id="myHeader">
@@ -128,13 +130,21 @@ const navObj = [
       headerIndex ? (
         <>
           <section class="self-start">
-            <H1 text="Rafael Hirashiki" index={true} class="text-5xl max-xl:text-4xl max-md:text-3xl max-sm:text-2xl font-bold" />
+            <H1
+              text="Rafael Hirashiki"
+              index={true}
+              class="text-5xl max-xl:text-4xl max-md:text-3xl max-sm:text-2xl font-bold"
+            />
             <p class="max-lg: text-sm">Casual Dancer</p>
           </section>
 
           <section class="text-2xl max-lg:text-lg max-md:text-lg max-sm:text-base font-bold">
-            <h2 class="pt-4 pb-4"><i class="fa-regular fa-circle"></i> Web Frontend Engineer</h2>
-            <h3 class="pb-4"><i class="fa-solid fa-moon"></i> System Engineer (graduating)</h3>
+            <h2 class="pt-4 pb-4">
+              <i class="fa-regular fa-circle" /> Web Frontend Engineer
+            </h2>
+            <h3 class="pb-4">
+              <i class="fa-solid fa-moon" /> System Engineer (graduating)
+            </h3>
           </section>
 
           <section class="">
@@ -171,24 +181,33 @@ const navObj = [
                   </a>
                 </div>
               </li>
+              <ContactIcons class={"justify-end"} classp={"text-end"} />
             </ul>
           </nav>
         </>
       ) : (
         <>
-          <ButtonToggleHeader client:only/>
-          <RafaPic class=" w-4/6 m-auto h-fit max-lg:w-6/6" />
-          <H1 text="Rafael Hirashiki" index={false}  class="absolute bottom-1/4 -left-10 -rotate-90 w-0 whitespace-nowrap text-3xl  max-xl:text-2xl max-lg:text-3xl max-md:text-2xl font-bold  m-auto"/>
+          <ButtonToggleHeader client:only />
+          <RafaPic class="relative z-50 w-4/6 m-auto h-fit max-lg:w-6/6 " />
+          <H1
+            text="Rafael Hirashiki"
+            index={false}
+            class="absolute bottom-1/4 -left-10 -rotate-90 w-0 whitespace-nowrap text-3xl  max-xl:text-2xl max-lg:text-3xl max-md:text-2xl font-bold  m-auto"
+          />
           <nav class="pb-16 relative z-50  max-xl:pb-20 self-end">
             <ul class="pr-4">
               {navObj.map((ele) => (
                 <li>
-                  {ele.path === "/projects2022" && <p class="li-year">2022 & 2023</p>}
+                  {ele.path === "/projects2022" && (
+                    <p class="li-year">2022 & 2023</p>
+                  )}
                   <a
                     href={ele.path}
                     class="text-xl max-xl:text-lg max-lg:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
                   >
-                    <p class={`flex flex-col items-start ${pathname === ele.path && "clr-brand-orange"}`} >
+                    <p
+                      class={`flex flex-col items-start ${pathname === ele.path && "clr-brand-orange"}`}
+                    >
                       <span class="li-projectTitle">{ele.navTitle}</span>
                       <span class="li-role">{ele.navSubtitle} </span>
                     </p>
@@ -200,7 +219,8 @@ const navObj = [
                       />
                       <i
                         class={`fa-solid fa-diamond ${
-                          pathname === ele.path && "big-diamond clr-brand-orange"
+                          pathname === ele.path &&
+                          "big-diamond clr-brand-orange"
                         } `}
                       />
                     </div>
