add missing project

--- a/src/pages/projects2022.astro
+++ b/src/pages/projects2022.astro
@@ -6,7 +6,8 @@ const oldportfolio = await getEntry("projects", "oldportfolio");
 const project01 = await getEntry("projects", "project01");
 const project02 = await getEntry("projects", "project02");
 const project03 = await getEntry("projects", "project03");
-const projects2022 = [oldportfolio, project01, project02, project03]
+const project04 = await getEntry("projects", "project04");
+const projects2022 = [oldportfolio, project01, project02, project03, project04]
 ---
 
 <ProjectLayout projects={projects2022}></ProjectLayout>
