--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -352,7 +352,7 @@ const projects = await getCollection("projects");
       } /* Hide scrollbar for IE, Edge, and Firefox */
 
       .card-height {
-        min-height: 500px;
+        height: 500px;
       }
       @keyframes animateVertical {
         from {
