--- a/src/components/ProjectLayout-BottomStars.astro
+++ b/src/components/ProjectLayout-BottomStars.astro
@@ -46,9 +46,8 @@ const { positionAbsolute } = Astro.props;
 <div
   class={`${
     positionAbsolute ? "absolute right-4 bottom-4" : "absolute -bottom-10 -right-10"
-  }  col-start-5 col-span-full h-2/3 w-10/12 max-md:col-start-3 max-md:bottom-0 max-md:-right-3 z-0`}
+  }  col-start-5 col-span-full h-2/3 w-10/12 max-md:col-start-3 max-md:bottom-0 max-md:-right-3 -z-10`}
 >
-  <slot />
   <div class="">
     <img src="/Images/shape-square.svg" class="star star-top star-right" />
     <div class="v-bar"></div>
