--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -15,7 +15,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
   }
   .grid-item-ball-reverse {
     grid-template-columns: 24px 1fr;
-    padding: 0.67rem 0;
+    padding: 0.8rem 0;
   }
 
   p {
@@ -63,7 +63,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     z-index: 1;
   }
   .orange-bar {
-    height: 90%;
+    height: 93%;
     top: 40px;
     left: 10px;
     background-color: var(--clr-brand-orange);
@@ -75,6 +75,14 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     left: 10px;
     background-color: var(--clr-charchoal);
     z-index: 1;
+  }
+
+  .ball-black {
+    padding: 1rem 0;
+  }
+
+  .grid-item-ball-reverse.ball-black {
+    padding: .5rem 0;
   }
 
   .ball-black .fa-circle {
@@ -140,7 +148,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         AB Test with VWO<i class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
-        Level up Frontend <br />Basics of Backend <br />Basic of Systems 
+        Level up Frontend <br />Basics of Backend <br />Basic of Systems
         <i class="fa-solid fa-circle"></i>
       </h3>
       <p class="grid-item-ball">
@@ -156,40 +164,55 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         Laravel<i class="fa-solid fa-circle"></i>
       </p>
 
-      <br><br>
-      <p class="grid-item-ball clr-brand-blue">
-        API: Backend with Nest.js + Typescript<br>Redis, Jest, JWT, Insomnia, MongoDB<i class="fa-solid fa-circle"></i>
+      <br /><br />
+      <p class="grid-item-ball">
+        API: Backend with Nest.js + Typescript<br />Redis, Jest, JWT, Insomnia,
+        MongoDB<i class="fa-solid fa-circle"></i>
       </p>
-      <h3 class="grid-item-ball clr-brand-blue">
+      <h3 class="grid-item-ball">
         Go • HTMX<i class="fa-solid fa-circle"></i>
       </h3>
-      <p class="grid-item-ball clr-brand-blue">
-        Full Stack Web Project: Astro.js, HTMX • Go<i class="fa-solid fa-circle"></i>
+      <p class="grid-item-ball">
+        API + Frontend : Astro.js, HTMX, Go, Google Cloud, MongoDB, Docker and
+        containers, Redis<i class="fa-solid fa-circle"></i>
       </p>
+      <h3 class="grid-item-ball">
+        Mid Full Stack & Systems Engineer
+        <i class="fa-solid fa-circle"></i>
+      </h3>
+
+      <h3 class="grid-item-ball">
+        Mobile: Dart • Flutter<br />
+        Data: Python<i class="fa-solid fa-circle"></i>
+      </h3>
     </div>
 
     <div class="relative">
       <div class="bar black-bar-blue"></div>
-      <br>
-      <br>
-      <h3 class="grid-item-ball ball-black">
-        Data: Python<br>Mobile: Dart • Flutter<i class="fa-solid fa-circle"></i>
-      </h3>
-      <h3 class="grid-item-ball ball-black">
-        Mid Full Stack & Systems Engineer
-        <i class="fa-solid fa-circle"></i>
-      </h3>
+      <br />
+      <br />
       <p class="grid-item-ball ball-black">
-        ???<i
+        Plan Full Stack and AI Systems<i class="fa-solid fa-circle"></i>
+      </p>
+      <p class="grid-item-ball ball-black">
+        Google Appsheet system development<i class="fa-solid fa-circle"></i>
+      </p>
+      <p class="grid-item-ball ball-black">
+        Business and user behavior data analysis with Clarity and Looker Studio<i
           class="fa-solid fa-circle"></i>
       </p>
       <p class="grid-item-ball ball-black">
-        ???<i
-          class="fa-solid fa-circle"></i>
+        SEO performance with google Search Console<i class="fa-solid fa-circle"
+        ></i>
       </p>
       <p class="grid-item-ball ball-black">
-        ???<i
-          class="fa-solid fa-circle"></i>
+        Shopify<i class="fa-solid fa-circle"></i>
+      </p>
+      <p class="grid-item-ball ball-black">
+        AI agents set up<i class="fa-solid fa-circle"></i>
+      </p>
+      <p class="grid-item-ball ball-black">
+        AI LLM local set up<i class="fa-solid fa-circle"></i>
       </p>
     </div>
   </div>
@@ -202,6 +225,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     <p class="pt-64">2023</p>
     <p class="pt-96">2024</p>
     <p class="pt-72">2025</p>
+    <p class="pt-96">2026</p>
   </div>
 
   <div
@@ -210,17 +234,18 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
     <p class="pt-4">2023</p>
     <p class="pt-96">2024</p>
     <p class="pt-72">2025</p>
+    <p class="pt-72">2026</p>
   </div>
 
   <div
     class="col-span-5 mt-96 relative -left-4 max-md:col-start-3 max-md:col-span-11 max-md:m-0"
   >
-    <div class=" relative flex flex-col">
+    <div class="relative flex flex-col">
       <div class="bar orange-bar"></div>
       <h3 class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"> </i>
-         System Development<br />
-         2 year Degree
+        System Development<br />
+        2 year Degree
       </h3>
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"> </i>XXI Computer Architecture
@@ -236,10 +261,12 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         and System Development
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
-        <i class="fa-solid fa-circle"></i>Object-Oriented Development with Algorithms && Java Basics
+        <i class="fa-solid fa-circle"></i>Object-Oriented Development with
+        Algorithms && Java Basics
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
-        <i class="fa-solid fa-circle"></i>Software Design (UML Diagrams, Object Orientation, Classes)
+        <i class="fa-solid fa-circle"></i>Software Design (UML Diagrams, Object
+        Orientation, Classes)
       </p>
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>More Programming Concepts with Java
@@ -253,47 +280,67 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
       <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Web Development
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
+      <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Smart Data Structures
       </p>
-      <p class="grid-item-ball grid-item-ball-reverse clr-brand-orange">
+      <p class="grid-item-ball grid-item-ball-reverse">
         <i class="fa-solid fa-circle"></i>Mobile Development
       </p>
+
+      <p class="grid-item-ball grid-item-ball-reverse">
+        <i class="fa-solid fa-circle"></i>Microservices & Containers
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse">
+        <i class="fa-solid fa-circle"></i>Compliance, Quality Control and IT
+        Strategies
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse">
+        <i class="fa-solid fa-circle"></i>CyberSecurity
+      </p>
+      <h3 class="grid-item-ball grid-item-ball-reverse">
+        <i class="fa-solid fa-circle"> </i>
+        Data Science post degree (3~12months)
+      </h3>
     </div>
 
     <div class="relative">
       <div class="bar black-bar-orange"></div>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>Microservices & Containers
+        <i class="fa-solid fa-circle"></i>Python
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>Compliance, Quality Control and IT
-        Strategies
+        <i class="fa-solid fa-circle"></i>Statistics for Data Science
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>CyberSecurity
-      </p>
-      <h3 class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"> </i>
-         + 2 years specialization / MBA
-      </h3>
-      <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>???
+        <i class="fa-solid fa-circle"></i>Programming
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>???
+        <i class="fa-solid fa-circle"></i>DataBase Essentials
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>???
+        <i class="fa-solid fa-circle"></i>Data Collection and Cleaning
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>???
+        <i class="fa-solid fa-circle"></i>Statistics Library in Python
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>???
+        <i class="fa-solid fa-circle"></i>Machine Learning
       </p>
       <p class="grid-item-ball grid-item-ball-reverse ball-black">
-        <i class="fa-solid fa-circle"></i>???
+        <i class="fa-solid fa-circle"></i>Clustering
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>Regression and Prediction
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>Deep Learning
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>Network Science
+      </p>
+      <p class="grid-item-ball grid-item-ball-reverse ball-black">
+        <i class="fa-solid fa-circle"></i>Perceptron Learning & Adaline
+        Algorithm
       </p>
     </div>
   </div>
